Fix spacing (#857)

--- a/site/docs/.vitepress/theme/style/_normalize.scss
+++ b/site/docs/.vitepress/theme/style/_normalize.scss
@@ -53,3 +53,23 @@
 .NotFound .quote {
   max-width: 100%; // instead of 256px
 }
+
+#home-content h2:first-child {
+  margin-top: 3.5rem;
+  padding-top: 2rem;
+}
+
+#home-footer {
+  margin-top: 3rem;
+  p {
+    line-height: 1.3rem;
+  }
+}
+
+.vp-doc {
+  h4,
+  h5,
+  h6 {
+    margin-top: 24px;
+  }
+}
